--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="container">
       <h4>Welcome to PythonApp running on Docker containers inside Jenkins!!</h4>
-      <h4>We have automated Docker image creation & spinning up Containers using Jenkins!!</h4>
+      <h4>We have automated Docker image creation & spinning up Containers using Jenkins and SCM via timestamps !!</h4>
       <h4>Automating using Jenkins, Docker, GitHub and Pipeline!!!!!</h4>
       <br>
        <h4>Anything is Possible!!!!!</h4>
